Fix title flicker

--- a/src/styles/CompSysTitle.css
+++ b/src/styles/CompSysTitle.css
@@ -11,5 +11,5 @@
 
 .flicker {
     color: transparent;
-    text-shadow: 0 0 8px #000;
+    text-shadow: 0 0 3px rgb(26, 113, 0);
 }
